package tile;

public abstract class Tile {

    public int x, y;
    public int speed;

    public String direction;

    public int spriteCounter = 0;
    public int spriteNum = 1;

}
